Wrote matrices, CG coefficients in markdown.

--- a/learningQuantumOpticsH2pZeeman.ipynb
+++ b/learningQuantumOpticsH2pZeeman.ipynb
@@ -108,14 +108,17 @@
     "## Operators in the $\\left|L,m_L \\right>$ and $\\left|S,m_S \\right>$ bases\r\n",
     "Next we will create some basic operators defined for the $\\left|L,m_L \\right>$ and $\\left|S,m_S \\right>$. Fortunately, for the basic SpinBasis opjects, we can use functions that are predefined in QuantumOptics.jl. \r\n",
     "We will need $L_z$, $L_{+}$, $L_{-}$, and $S_z$, $S_{+}$, and $S_{-}$ in their respective bases. \r\n",
-    "To make life easier, we will set $\\hbar=1$. In general:\r\n",
+    "To make life easier, we will set $\\hbar=1$. In general for an angular momentum $J$ with $z$-component $m_J$:\r\n",
+    "\r\n",
     "$$\r\n",
     "\\mathbf{J^2} \\left|J, m_J \\right> = J(J+1)\\left|J, m_J \\right> \\\\\r\n",
     "\\mathbf{J_z} \\left|J, m_J \\right> = m_J \\left|J, m_J \\right> \\\\\r\n",
     "\\mathbf{J_{+}} \\left|J, m_J \\right> = \\sqrt{J(J+1)-m_J(m_J+1)} \\left|J, m_J + 1 \\right> \\\\\r\n",
     "\\mathbf{J_{-}} \\left|J, m_J \\right> = \\sqrt{J(J+1)-m_J(m_J-1)} \\left|J, m_J - 1 \\right> \r\n",
     "$$\r\n",
+    "\r\n",
     "Furthermore, we have\r\n",
+    "\r\n",
     "$$\r\n",
     "\\mathbf{J_{+}}=\\mathbf{J_x}+i \\mathbf{J_y} \\\\\r\n",
     "\\mathbf{J_{-}}=\\mathbf{J_x}-i \\mathbf{J_y} \\\\\r\n",
@@ -123,7 +126,8 @@
     "\\mathbf{J_y}=\\frac{-i}{2} \\left( \\mathbf{J_{+}}- \\mathbf{J_{-}} \\right)\r\n",
     "$$\r\n",
     "\r\n",
-    "In the $\\left| L=1, L_I \\right>$ basis, we need the following operators:\r\n",
+    "In the $\\left| L=1, m_I \\right>$ basis, we need the following operators:\r\n",
+    "\r\n",
     "$$\r\n",
     " L_z\r\n",
     " =\r\n",
@@ -135,18 +139,19 @@
     "=\r\n",
     "\\hbar\r\n",
     "\\begin{pmatrix}\r\n",
-    "0 & 0 & 0 \\\\ \\sqrt{2} & 0  & 0\\\\ 0 & \\sqrt{2} & 0\r\n",
+    "0 & \\sqrt{2} & 0 \\\\ 0 & 0 & \\sqrt{2} \\\\ 0 & 0 & 0\r\n",
     "\\end{pmatrix}\r\n",
     "\\qquad\r\n",
     "L_{-}\r\n",
     "=\r\n",
     "\\hbar\r\n",
     "\\begin{pmatrix}\r\n",
-    "0 & \\sqrt{2} & 0 \\\\ 0 & 0 & \\sqrt{2} \\\\ 0 & 0 & 0\r\n",
+    "0 & 0 & 0 \\\\ \\sqrt{2} & 0  & 0\\\\ 0 & \\sqrt{2} & 0\r\n",
     "\\end{pmatrix}\r\n",
     "$$\r\n",
     "\r\n",
     "In the $\\left| S=\\frac{1}{2}, m_S \\right>$ basis, we will need the following operators:\r\n",
+    "\r\n",
     "$$\r\n",
     " S_z\r\n",
     " =\r\n",
@@ -158,18 +163,18 @@
     "=\r\n",
     "\\hbar\r\n",
     "\\begin{pmatrix}\r\n",
-    "0 & 0 \\\\ 1 & 0\r\n",
+    "0 & 1 \\\\ 0 & 0\r\n",
     "\\end{pmatrix}\r\n",
     "\\qquad\r\n",
     "S_{-}\r\n",
     "=\r\n",
     "\\hbar\r\n",
     "\\begin{pmatrix}\r\n",
-    "0 & 1 \\\\ 0 & 0\r\n",
+    "0 & 0 \\\\ 1 & 0\r\n",
     "\\end{pmatrix}\r\n",
     "$$\r\n",
     "\r\n",
-    "If we want to \"measure\" the $z$-component of the angular momentum of some state $\\left| \\alpha \\right>$, we can just use $<J_z>= \\left< \\alpha | J_z | \\alpha \\right>$, which can be expressed in matrix form as:\r\n",
+    "If we want to \"measure\" the $z$-component of the angular momentum of some state $\\left| \\alpha \\right>$, we can just use $<J_z>= \\left< \\alpha | J_z | \\alpha \\right>$. For example, for an angular momentum of $J=\\frac{1}{2}$, we can express the procedure in matrix form as:\r\n",
     "$$\r\n",
     "\\left< J_z \\right> =\\begin{pmatrix} \\alpha_1^{\\dagger} \\alpha_2^{\\dagger} \\end{pmatrix} \\begin{pmatrix} \\frac{\\hbar}{2} & 0 \\\\ 0 & \\frac{\\hbar}{2} \\end{pmatrix} \\begin{pmatrix} \\alpha_1 \\\\ \\alpha_2 \\end{pmatrix} = \\frac{\\hbar}{2}(\\alpha_1^{\\dagger}\\alpha_1 + \\alpha_2^{\\dagger}\\alpha_2).\r\n",
     "$$"
@@ -207,17 +212,40 @@
    "metadata": {},
    "source": [
     "## Operators in the spin(1/2) $\\otimes$ spin(1) basis\r\n",
-    "Now we need to express these operators in the $\\frac{1}{2} \\otimes 1 \\left|S=\\frac{1}{2},L=1 \\right>$ basis. The key is the [outer product](https://en.wikipedia.org/wiki/Outer_product). \r\n",
+    "Now we need to express these operators in the $\\frac{1}{2} \\otimes 1$ or $\\left|S=\\frac{1}{2},L=1 \\right>$ basis. The key is the [outer product](https://en.wikipedia.org/wiki/Outer_product). \r\n",
     "\r\n",
     "$$\r\n",
-    "L_z=\\mathbb{1}^{\\left|S,m_S \\right>} \\otimes L_z^{\\left|L, m_L \\right>} \\\\\r\n",
-    "J_{+}=\\mathbb{1}^{\\left|S,m_S \\right>} \\otimes J_{+}^{\\left|L, m_L \\right>} \\\\\r\n",
-    "J_{-}=\\mathbb{1}^{\\left|S,m_S \\right>} \\otimes J_{-}^{\\left|L, m_L \\right>} \\\\\r\n",
-    "S_z= I_z^{\\left|S, m_S \\right>} \\otimes  \\mathbb{1}^{\\left|L,m_L \\right>} \\\\\r\n",
-    "S_{+}= I_{+}^{\\left|S, m_S \\right>} \\otimes \\mathbb{1}^{\\left|L,m_L \\right>} \\\\\r\n",
-    "S_{-}= I_{-}^{\\left|S, m_S \\right>} \\otimes \\mathbb{1}^{\\left|L,m_L \\right>}\r\n",
+    "\\mathbf{L_z}=\\mathbb{1}^{\\left|S,m_S \\right>} \\otimes \\mathbf{L_z}^{\\left|L, m_L \\right>} \\\\\r\n",
+    "\\mathbf{L_{+}}=\\mathbb{1}^{\\left|S,m_S \\right>} \\otimes \\mathbf{L_{+}}^{\\left|L, m_L \\right>} \\\\\r\n",
+    "\\mathbf{L_{-}}=\\mathbb{1}^{\\left|S,m_S \\right>} \\otimes \\mathbf{L_{-}}^{\\left|L, m_L \\right>} \\\\\r\n",
+    "\\mathbf{S_z}= \\mathbf{S_z}^{\\left|S, m_S \\right>} \\otimes  \\mathbb{1}^{\\left|L,m_L \\right>} \\\\\r\n",
+    "\\mathbf{S_{+}}= \\mathbf{S_{+}}^{\\left|S, m_S \\right>} \\otimes \\mathbb{1}^{\\left|L,m_L \\right>} \\\\\r\n",
+    "\\mathbf{S_{-}}= \\mathbf{S_{-}}^{\\left|S, m_S \\right>} \\otimes \\mathbb{1}^{\\left|L,m_L \\right>}\r\n",
     "$$\r\n",
-    "\r\n"
+    "\r\n",
+    "Concretely, \r\n",
+    "\r\n",
+    "$$\r\n",
+    "\\mathbf{L_z}=\\hbar \\begin{pmatrix} 1&0&0&0&0&0 \\\\ 0&1&0&0&0&0 \\\\ 0&0&0&0&0&0 \\\\ 0&0&0&0&0&0 \\\\ 0&0&0&0&1&0 \\\\ 0&0&0&0&0&1\\end{pmatrix}\r\n",
+    "\\qquad\r\n",
+    "\\mathbf{S_z}=\\frac{\\hbar}{2} \\begin{pmatrix} 1&0&0&0&0&0 \\\\ 0&-1&0&0&0&0 \\\\ 0&0&1&0&0&0 \\\\ 0&0&0&-1&0&0 \\\\ 0&0&0&0&1&0 \\\\ 0&0&0&0&0&-1\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "\r\n",
+    "For $\\mathbf{L_{+}}$ and $\\mathbf{L_{-}}$ we have:\r\n",
+    "\r\n",
+    "$$\r\n",
+    "\\mathbf{L_{+}}=\\hbar \\begin{pmatrix} 0&0&\\sqrt{2}&0&0&0 \\\\ 0&0&0&\\sqrt{2}&0&0 \\\\ 0&0&0&0&\\sqrt{2}&0 \\\\ 0&0&0&0&0&\\sqrt{2} \\\\ 0&0&0&0&0&0 \\\\ 0&0&0&0&0&0\\end{pmatrix}\r\n",
+    "\\qquad\r\n",
+    "\\mathbf{L_{-}}=\\hbar \\begin{pmatrix} 0&0&0&0&0&0 \\\\ 0&0&0&0&0&0 \\\\ \\sqrt{2}&0&0&0&0&0 \\\\ 0&\\sqrt{2}&0&0&0&0 \\\\ 0&0&\\sqrt{2}&0&0&0 \\\\ 0&0&0&\\sqrt{2}&0&0\\end{pmatrix}\r\n",
+    "$$\r\n",
+    "\r\n",
+    "For $\\mathbf{S_{+}}$ and $\\mathbf{S_{-}}$ we have:\r\n",
+    "\r\n",
+    "$$\r\n",
+    "\\mathbf{S_{+}}=\\hbar \\begin{pmatrix} 0&1&0&0&0&0 \\\\ 0&0&0&0&0&0 \\\\ 0&0&0&1&0&0 \\\\ 0&0&0&0&0&0 \\\\ 0&0&0&0&0&1 \\\\ 0&0&0&0&0&0\\end{pmatrix}\r\n",
+    "\\qquad\r\n",
+    "\\mathbf{S_{-}}=\\hbar \\begin{pmatrix} 0&0&0&0&0&0 \\\\ 1&0&0&0&0&0 \\\\ 0&0&0&0&0&0 \\\\ 0&0&1&0&0&0 \\\\ 0&0&0&0&0&0 \\\\ 0&0&0&0&1&0\\end{pmatrix}\r\n",
+    "$$\r\n"
    ]
   },
   {
@@ -12702,6 +12730,54 @@
     "print(\"B4:   Lz = \",real(dagger(B4)*S1z*B4),\"      Sz = \",real(dagger(B4)*S2z*B4), \"\\n\")\r\n",
     "print(\"B5:   Lz = \",real(dagger(B5)*S1z*B5),\"      Sz = \",real(dagger(B5)*S2z*B5), \"\\n\")\r\n",
     "print(\"B6:   Lz = \",real(dagger(B6)*S1z*B6),\"      Sz = \",real(dagger(B6)*S2z*B6), \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clebsch-Gordan (CG) Coefficients ###\r\n",
+    "Suppose we have two spins $j_1$ and $j_2$ and we have expressed them in the $\\left| j_1,j_2 \\right>$ basis, but would like to express them in the $\\left| j,m \\right>$ basis, where $\\mathbf{J}=\\mathbf{J_1}+\\mathbf{J_2}$. We can proceed as follows.\r\n",
+    "$$\r\n",
+    "\\left |jm, j_1 j_2 \\right> = \\sum_{m_1} \\sum_{m_2} \\left| j_1 m_1, j_2 m_2 \\right> \\left< j_1 m_1, j_2 m_2 | jm \\right>.\r\n",
+    "$$\r\n",
+    "The Clebsch-Gordan (CG) coefficients are the coefficients of the expansion\r\n",
+    "$$\r\n",
+    "\\left< j_1 m_1, j_2 m_2 | jm, j_1 j_2 \\right> \\equiv \\left< j_1 m_1, j_2 m_2  | jm \\right>.\r\n",
+    "$$\r\n",
+    "\r\n",
+    "The CG coefficients have the following properties:\r\n",
+    "1. $\\left< j_1 m_1, j_2 m_2 | jm \\right> \\neq 0$ only if $j_1 - j_2 \\leq j \\leq j_1 + j_2$\r\n",
+    "2. $\\left< j_1 m_1, j_2 m_2 | jm \\right> \\neq 0$ only if $m_1 + m_2 = m$\r\n",
+    "3. They are real (by convention)\r\n",
+    "4. $\\left< j_1 j_1, j_2 (j-j_1) | jj \\right>$ is positive (by convention)\r\n",
+    "5. $\\left< j_1 m_1, j_2 m_2  | jm \\right> = (-1)^{j_1 + j_2 -j} \\left< j_1 (-m_1), j_2 (-m_2)  | j(-m) \\right>$ .\r\n",
+    "\r\n",
+    "He also treats the spin-1/2 $\\otimes$ spin-1/2 problem, i.e., when $j_1=1/2$ and $j_2=1/2$. Then\r\n",
+    "$$\r\n",
+    "\\frac{1}{2} \\otimes \\frac{1}{2}=1 \\oplus 0.\r\n",
+    "$$\r\n",
+    "In other words, $j=1$ (triplet) or $j=0$ (singlet).\r\n",
+    "\r\n",
+    "Now, in order to convert from the $\\left| L S; m_L m_S\\right>$ basis to the $\\left|L S; J m_J \\right>$ basis,  we can use a matrix made up of CG coefficients: \r\n",
+    "\r\n",
+    "$$\r\n",
+    "\\begin{pmatrix}\r\n",
+    " \\left| J=\\frac{3}{2},m_J=\\frac{3}{2} \\right> \\\\ \\left| J=\\frac{3}{2},m_J=\\frac{1}{2} \\right> \\\\ \\left| J=\\frac{3}{2},m_J=-\\frac{1}{2} \\right> \\\\ \\left| J=\\frac{3}{2},m_J=-\\frac{3}{2} \\right> \\\\ \\left| J=\\frac{1}{2},m_J=\\frac{1}{2} \\right> \\\\ \\left| J=\\frac{1}{2},m_J=-\\frac{3}{2} \\right>  \r\n",
+    " \\end{pmatrix}\r\n",
+    " =\r\n",
+    "\\begin{pmatrix}\r\n",
+    "\\left< 1,1; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},\\frac{3}{2} \\right> & \\left< 1,1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},\\frac{3}{2} \\right> & \\left< 1,0; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},\\frac{3}{2} \\right> & \\left< 1,0; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},\\frac{3}{2} \\right> \\left< 1,-1; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},\\frac{3}{2} \\right> & \\left< 1,-1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},\\frac{3}{2} \\right> \\\\\r\n",
+    "\\left< 1,1; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},\\frac{1}{2} \\right> & \\left< 1,1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},\\frac{1}{2} \\right> & \\left< 1,0; \\frac{1}{2}, \\frac{1}{2} | \\frac{1}{2},\\frac{3}{2} \\right> & \\left< 1,0; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},\\frac{1}{2} \\right> \\left< 1,-1; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},\\frac{1}{2} \\right> & \\left< 1,-1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},\\frac{1}{2} \\right> \\\\\r\n",
+    "\\left< 1,1; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},-\\frac{1}{2} \\right> & \\left< 1,1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},-\\frac{1}{2} \\right> & \\left< 1,0; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},-\\frac{1}{2} \\right> & \\left< 1,0; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},-\\frac{1}{2} \\right> \\left< 1,-1; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},-\\frac{1}{2} \\right> & \\left< 1,-1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},-\\frac{1}{2} \\right> \\\\\r\n",
+    "\\left< 1,1; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},-\\frac{3}{2} \\right> & \\left< 1,1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},-\\frac{3}{2} \\right> & \\left< 1,0; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},-\\frac{3}{2} \\right> & \\left< 1,0; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},-\\frac{3}{2} \\right> \\left< 1,-1; \\frac{1}{2}, \\frac{1}{2} | \\frac{3}{2},-\\frac{3}{2} \\right> & \\left< 1,-1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{3}{2},-\\frac{3}{2} \\right> \\\\\r\n",
+    "\\left< 1,1; \\frac{1}{2}, \\frac{1}{2} | \\frac{1}{2},\\frac{1}{2} \\right> & \\left< 1,1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{1}{2},\\frac{1}{2} \\right> & \\left< 1,0; \\frac{1}{2}, \\frac{1}{2} | \\frac{1}{2},\\frac{1}{2} \\right> & \\left< 1,0; \\frac{1}{2}, -\\frac{1}{2} | \\frac{1}{2},\\frac{1}{2} \\right> \\left< 1,-1; \\frac{1}{2}, \\frac{1}{2} | \\frac{1}{2},\\frac{1}{2} \\right> & \\left< 1,-1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{1}{2},\\frac{1}{2} \\right> \\\\\r\n",
+    "\\left< 1,1; \\frac{1}{2}, \\frac{1}{2} | \\frac{1}{2},-\\frac{1}{2} \\right> & \\left< 1,1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{1}{2},-\\frac{1}{2} \\right> & \\left< 1,0; \\frac{1}{2}, \\frac{1}{2} | \\frac{1}{2},-\\frac{1}{2} \\right> & \\left< 1,0; \\frac{1}{2}, -\\frac{1}{2} | \\frac{1}{2},-\\frac{1}{2} \\right> \\left< 1,-1; \\frac{1}{2}, \\frac{1}{2} | \\frac{1}{2},-\\frac{1}{2} \\right> & \\left< 1,-1; \\frac{1}{2}, -\\frac{1}{2} | \\frac{1}{2},-\\frac{1}{2} \\right> \r\n",
+    "\\end{pmatrix}\r\n",
+    "\\begin{pmatrix} \r\n",
+    " \\left| m_L=1, m_S=\\frac{1}{2} \\right> \\\\ \\left| m_L=1, m_S=-\\frac{1}{2} \\right> \\\\ \\left| m_L=0, m_S=\\frac{1}{2} \\right> \\\\ \\left| m_L=0, m_S=-\\frac{1}{2} \\right> \\\\ \\left| m_L=-1,m_S=\\frac{1}{2} \\right> \\\\ \\left| m_L=-1, m_S=-\\frac{1}{2} \\right> \r\n",
+    " \\end{pmatrix} \r\n",
+    "$$"
    ]
   },
   {
@@ -25214,10 +25290,8 @@
    "name": "julia-1.5"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": ""
   }
  },
  "nbformat": 4,
