Corrected errors in matrices. Cosmetic changes.

--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -247,6 +247,7 @@
     "To make life easier, we will set $\\hbar=1$.\r\n",
     "\r\n",
     "Again, in each spin-1/2 basis, we can define operators:\r\n",
+    "\r\n",
     "$$\r\n",
     " S_z\r\n",
     " =\r\n",
@@ -258,14 +259,14 @@
     "=\r\n",
     "\\hbar\r\n",
     "\\begin{pmatrix}\r\n",
-    "0 & 0 \\\\ 1 & 0\r\n",
+    "0 & 1 \\\\ 0 & 0\r\n",
     "\\end{pmatrix}\r\n",
     "\\qquad\r\n",
     "S_{-}\r\n",
     "=\r\n",
     "\\hbar\r\n",
     "\\begin{pmatrix}\r\n",
-    "0 & 1 \\\\ 0 & 0\r\n",
+    "0 & 0 \\\\ 1 & 0\r\n",
     "\\end{pmatrix}\r\n",
     "$$\r\n",
     "\r\n",
@@ -277,6 +278,7 @@
     "Thus, $S_{-} \\left| + \\right> = \\hbar \\left| - \\right >$, but $S_{+} \\left| + \\right> = 0$, as can be checked with the matrices.\r\n",
     "\r\n",
     "If we want to \"measure\" the $z$-component of the spin of some state $\\left| \\alpha \\right>$, we can just use $<S_z>= \\left< \\alpha | S_z | \\alpha \\right>$, which can be expressed in matrix form as:\r\n",
+    "\r\n",
     "$$\r\n",
     "\\left< S_z \\right> =\\begin{pmatrix} \\alpha_1^{\\dagger} \\alpha_2^{\\dagger} \\end{pmatrix} \\begin{pmatrix} \\frac{\\hbar}{2} & 0 \\\\ 0 & \\frac{\\hbar}{2} \\end{pmatrix} \\begin{pmatrix} \\alpha_1 \\\\ \\alpha_2 \\end{pmatrix} = \\frac{\\hbar}{2}(\\alpha_1^{\\dagger}\\alpha_1 + \\alpha_2^{\\dagger}\\alpha_2).\r\n",
     "$$\r\n"
@@ -316,6 +318,7 @@
     "## Operators in the spin(1/2) $\\otimes$ spin(1/2) basis\r\n",
     "Now we need to express these operators in the spin(1/2) $\\otimes$ spin(1/2) basis. The key is the [outer product](https://en.wikipedia.org/wiki/Outer_product). \r\n",
     "Thus, in the $\\left| m_I m_S \\right>$ basis, \r\n",
+    "\r\n",
     "$$\r\n",
     "S_z^{m_I m_S} = \\mathbb{1}^{m_I} \\otimes S_z^{m_S} \\\\\r\n",
     "S_{+}^{m_I m_S} = \\mathbb{1}^{m_I} \\otimes S_{+}^{m_S} \\\\\r\n",
@@ -326,6 +329,7 @@
     "$$\r\n",
     "\r\n",
     "In this case, according to the way have defined things, we have\r\n",
+    "\r\n",
     "$$\r\n",
     "S_z=\\mathbb{1}^{m_I} \\otimes S_z^{m_S}\r\n",
     "=\r\n",
@@ -334,6 +338,7 @@
     "1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0 \\\\ 0 & 0 & -1 & 0 \\\\ 0 & 0 & 0 & -1\r\n",
     "\\end{pmatrix}\r\n",
     "$$\r\n",
+    "\r\n",
     "$$\r\n",
     "I_z= I_z^{m_I} \\otimes  \\mathbb{1}^{m_S}\r\n",
     "=\r\n",
@@ -342,6 +347,7 @@
     "1 & 0 & 0 & 0 \\\\ 0 & -1 & 0 & 0 \\\\ 0 & 0 & 1 & 0 \\\\ 0 & 0 & 0 & -1\r\n",
     "\\end{pmatrix}\r\n",
     "$$\r\n",
+    "\r\n",
     "$$\r\n",
     "S_{+}= \\mathbb{1}^{m_I} \\otimes S_{+}^{m_S}   \r\n",
     "=\r\n",
@@ -350,6 +356,7 @@
     "0 & 0 & 1 & 0 \\\\ 0 & 0 & 0 & 1 \\\\ 0 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 0\r\n",
     "\\end{pmatrix}\r\n",
     "$$\r\n",
+    "\r\n",
     "$$\r\n",
     "S_{-}= \\mathbb{1}^{m_I} \\otimes S_{-}^{m_S}  \r\n",
     "=\r\n",
@@ -358,6 +365,7 @@
     "0 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 0 \\\\ 1 & 0 & 0 & 0 \\\\ 0 & 1 & 0 & 0\r\n",
     "\\end{pmatrix}\r\n",
     "$$\r\n",
+    "\r\n",
     "$$\r\n",
     "I_{+}= I_{+}^{m_I} \\otimes \\mathbb{1}^{m_S}\r\n",
     "=\r\n",
@@ -366,6 +374,7 @@
     "0 & 1 & 0 & 0 \\\\ 0 & 0 & 0 & 0 \\\\ 0 & 0 & 0 & 1 \\\\ 0 & 0 & 0 & 0\r\n",
     "\\end{pmatrix}\r\n",
     "$$\r\n",
+    "\r\n",
     "$$\r\n",
     "I_{-}=  I_{-}^{m_I} \\otimes \\mathbb{1}^{m_S} \r\n",
     "=\r\n",
@@ -822,6 +831,7 @@
    "source": [
     "## Hamiltonian in the $\\left| m_I m_S \\right>$ basis ##\r\n",
     "In the $\\left| m_I m_S \\right>$ basis, the operators $I_z$ and $S_z$ are diagonal. The operator $\\mathbf{I} \\cdot \\mathbf{S}$ is not, but we have calculated it above. Thus, the Hamiltonian becomes\r\n",
+    "\r\n",
     "$$\r\n",
     "H=\\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S} + 2 \\omega_0 S_z + \\omega_n I_z = \\frac{\\mathscr{A}\\hbar^2}{4} \\begin{pmatrix} 1 & 0 &0 &0 \\\\ 0 &-1 &2 &0 \\\\ 0 &2 &-1 &0 \\\\ 0 &0 &0 &1 \\end{pmatrix} + 2\\omega_0 \\begin{pmatrix} 1 &0 &0 &0 \\\\ 0 &1 &0 &0 \\\\ 0 &0 &-1 &0 \\\\ 0 &0 &0 &-1 \\end{pmatrix} + \\omega_n \\begin{pmatrix} 1 &0 &0 &0 \\\\ 0 &-1 &0 &0 \\\\ 0 &0 &1 &0 \\\\ 0 &0 &0 &-1 \\end{pmatrix}.\r\n",
     "$$\r\n",
@@ -20961,10 +20971,8 @@
    "name": "julia-1.5"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.5.3"
+   "version": ""
   }
  },
  "nbformat": 4,
