Mostly cosmetic changes to math markdown.

--- a/learningQuantumOptics.ipynb
+++ b/learningQuantumOptics.ipynb
@@ -272,7 +272,7 @@
     "\r\n",
     "In general,\r\n",
     "$$\r\n",
-    "J_{\\pm} \\left| j,m \\right> = \\hbar \\sqrt((j\\mp m)(j \\pm m+1)) \\left|j, m \\pm 1 \\right>.\r\n",
+    "J_{\\pm} \\left| j,m \\right> = \\hbar \\sqrt{(j\\mp m)(j \\pm m+1)} \\left|j, m \\pm 1 \\right>.\r\n",
     "$$\r\n",
     "\r\n",
     "Thus, $S_{-} \\left| + \\right> = \\hbar \\left| - \\right >$, but $S_{+} \\left| + \\right> = 0$, as can be checked with the matrices.\r\n",
@@ -10798,9 +10798,11 @@
    "source": [
     "## The Hamiltonian in the $\\left| F,m \\right>$ basis ##\r\n",
     "Alternatively, we can solve the problem in the $\\left| F,m \\right>$ basis. In this basis we have the advantage that the operator $\\mathbf{I} \\cdot \\mathbf{S}$ is diagonal. However, $I_z$ and $S_z$ are not diagonal, so we will have to express them in this basis. We have found the expression for $S_z$ in this basis above, and we will ignore the $\\omega_n I_z$ for now, since it is small compared to the $\\omega_0 S_z$ term. \r\n",
+    "\r\n",
     "$$\r\n",
     "H=\\mathscr{A} \\mathbf{I} \\cdot \\mathbf{S} + 2 \\omega_0 S_z = \\frac{\\mathscr{A}\\hbar^2}{4} \\begin{pmatrix} 1 & 0 &0 &0 \\\\ 0 &1 &0 &0 \\\\ 0 &0 &1 &0 \\\\ 0 &0 &0 &-3 \\end{pmatrix} + 2 \\frac{\\hbar}{2} \\omega_0 \\begin{pmatrix} 1 &0 &0 &0 \\\\ 0 &0 &0 &1 \\\\ 0 &0 &-1 &0 \\\\ 0 &1 &0 &0 \\end{pmatrix} .\r\n",
     "$$\r\n",
+    "\r\n",
     "Again, we need to determine diagonalize this matrix to obtain the eigenvalues and eigenvectors. "
    ]
   },
