--- a/Rb87-attempt.ipynb
+++ b/Rb87-attempt.ipynb
@@ -58400,19 +58400,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "ename": "LoadError",
-     "evalue": "MethodError: no method matching getindex(::SubspaceBasis{Vector{Int64}, CompositeBasis{Vector{Int64}, Tuple{SpinBasis{3//2, Int64}, SpinBasis{1//2, Int64}}}, Ket{CompositeBasis{Vector{Int64}, Tuple{SpinBasis{3//2, Int64}, SpinBasis{1//2, Int64}}}, Vector{Float64}}, 0x62cf0c7a0f3c46de, UInt64}, ::Int64)",
+     "evalue": "UndefVarError: HyperfineManifold not defined",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching getindex(::SubspaceBasis{Vector{Int64}, CompositeBasis{Vector{Int64}, Tuple{SpinBasis{3//2, Int64}, SpinBasis{1//2, Int64}}}, Ket{CompositeBasis{Vector{Int64}, Tuple{SpinBasis{3//2, Int64}, SpinBasis{1//2, Int64}}}, Vector{Float64}}, 0x62cf0c7a0f3c46de, UInt64}, ::Int64)",
+      "UndefVarError: HyperfineManifold not defined",
       "",
       "Stacktrace:",
       " [1] top-level scope",
-      "   @ In[40]:29",
+      "   @ In[2]:12",
       " [2] eval",
       "   @ .\\boot.jl:360 [inlined]",
       " [3] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
@@ -58960,8 +58960,10 @@
    "name": "julia-1.6"
   },
   "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
    "name": "julia",
-   "version": ""
+   "version": "1.6.0"
   }
  },
  "nbformat": 4,
