Added explanatory comments.

--- a/NMOR.ipynb
+++ b/NMOR.ipynb
@@ -49,73 +49,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Bmin=-5.0\n",
-    "Bmax=5.0\n",
-    "Bstep=0.01\n",
-    "\n",
-    "function calc_obs(t,ρ)\n",
-    "    abs=3*Γ*imag(expect(σ₁-σ₂,ρ))\n",
-    "    phase=3*Γ*real(expect(σ₁-σ₂,ρ))\n",
-    "    rot=3*Γ*real(expect(σ₁+σ₂,ρ))\n",
-    "    ell=3*Γ*imag(expect(σ₁+σ₂,ρ))\n",
-    "end\n",
-    "\n",
-    "σ₁₄=transition(myJ1system,1,4)\n",
-    "σ₃₄=transition(myJ1system,3,4)\n",
-    "Γ₄₁=transition(myJ1system,4,1)\n",
-    "Γ₄₂=transition(myJ1system,4,2)\n",
-    "Γ₄₃=transition(myJ1system,4,3)\n",
-    "γ₄₅=transition(myJ1system,4,5)\n",
-    "γ₃₅=transition(myJ1system,3,5)\n",
-    "γ₂₅=transition(myJ1system,2,5)\n",
-    "γ₁₅=transition(myJ1system,1,5)\n",
-    "γ₅₁=transition(myJ1system,5,1)\n",
-    "γ₅₂=transition(myJ1system,5,2)\n",
-    "γ₅₃=transition(myJ1system,5,3)\n",
-    "proj1=transition(myJ1system,1,1)\n",
-    "proj2=transition(myJ1system,2,2)\n",
-    "proj3=transition(myJ1system,3,3)\n",
-    "proj4=transition(myJ1system,4,4)\n",
-    "id=identityoperator(proj1)\n",
-    "J=[sqrt(γ)*γ₄₅,\n",
-    "   sqrt(γ)*γ₃₅,\n",
-    "   sqrt(γ)*γ₂₅,\n",
-    "   sqrt(γ)*γ₁₅,\n",
-    "   sqrt(br*Γ/3)*Γ₄₁,\n",
-    "   sqrt(br*Γ/3)*Γ₄₂,\n",
-    "   sqrt(br*Γ/3)*Γ₄₃,\n",
-    "   sqrt(γ/3)*γ₅₁,\n",
-    "   sqrt(γ/3)*γ₅₂,\n",
-    "   sqrt(γ/3)*γ₅₃\n",
-    "  ]\n",
-    "\n",
-    "Bvalues=[]\n",
-    "obs1=[]\n",
-    "obs2=[]\n",
-    "obs3=[]\n",
-    "obs4=[]\n",
-    "for B=Bmin:Bstep:Bmax\n",
-    "    H=(ΩR)*(σ₁₄+dagger(σ₁₄)) + (ΩR)*(σ₃₄+dagger(σ₃₄)) + ΩL*B*proj1 - ΩL*B*proj3 - Δ*proj4\n",
-    "    ϕ₀=(\n",
-    "        dm(nlevelstate(myJ1system,1))\n",
-    "            +dm(nlevelstate(myJ1system,2))\n",
-    "            +dm(nlevelstate(myJ1system,3))\n",
-    "            +3*dm(nlevelstate(myJ1system,5))\n",
-    "       )/6\n",
-    "    t_out, ρ_master = steady.master(H,J;rho0=ϕ₀)\n",
-    "    abs=3*(Γ/ΩR)*imag(expect(σ₃₄,ρ_master[2])-expect(σ₁₄,ρ_master[2]))\n",
-    "    Δϕ=3*(Γ/ΩR)*real(expect(σ₃₄,ρ_master[2])-expect(σ₁₄,ρ_master[2]))\n",
-    "    rot=3*(Γ/ΩR)*real(expect(σ₁₄,ρ_master[2])+expect(σ₃₄,ρ_master[2]))\n",
-    "    ell=3*(Γ/ΩR)*imag(expect(σ₁₄,ρ_master[2])+expect(σ₃₄,ρ_master[2]))\n",
-    "#    ell=3*(Γ/ΩR)*imag(expect(σ₁₄-σ₃₄,ρ_master[2]))\n",
-    "#    rot=3*(Γ/ΩR)*real(expect(σ₁₄-σ₃₄,ρ_master[2]))\n",
-    "#    abs=3*(Γ/ΩR)*real(expect(σ₁₄+σ₃₄,ρ_master[2]))\n",
-    "#    Δϕ=3*(Γ/ΩR)*imag(expect(σ₁₄+σ₃₄,ρ_master[2]))\n",
-    "    push!(Bvalues,B)\n",
-    "    push!(obs1,abs)\n",
-    "    push!(obs2,Δϕ)\n",
-    "    push!(obs3,rot)\n",
-    "    push!(obs4,ell)\n",
+    "Bmin=-5.0\r\n",
+    "Bmax=5.0\r\n",
+    "Bstep=0.01\r\n",
+    "\r\n",
+    "function calc_obs(t,ρ)\r\n",
+    "    abs=3*Γ*imag(expect(σ₁-σ₂,ρ))\r\n",
+    "    phase=3*Γ*real(expect(σ₁-σ₂,ρ))\r\n",
+    "    rot=3*Γ*real(expect(σ₁+σ₂,ρ))\r\n",
+    "    ell=3*Γ*imag(expect(σ₁+σ₂,ρ))\r\n",
+    "end\r\n",
+    "\r\n",
+    "σ₁₄=transition(myJ1system,1,4)   # Laser excitation |1><4|\r\n",
+    "σ₃₄=transition(myJ1system,3,4)   # Laser excitation |3><4|\r\n",
+    "Γ₄₁=transition(myJ1system,4,1)   # excited state relaxation |4><1| \r\n",
+    "Γ₄₂=transition(myJ1system,4,2)   # excited state relaxation |4><2|\r\n",
+    "Γ₄₃=transition(myJ1system,4,3)   # excited state relaxation |4><3|\r\n",
+    "γ₄₅=transition(myJ1system,4,5)   # transit relaxation (out) |4><5|\r\n",
+    "γ₃₅=transition(myJ1system,3,5)   # transit relaxation (out) |3><5|\r\n",
+    "γ₂₅=transition(myJ1system,2,5)   # transit relaxation (out) |2><5|\r\n",
+    "γ₁₅=transition(myJ1system,1,5)   # transit relaxation (out) |4><5|\r\n",
+    "γ₅₁=transition(myJ1system,5,1)   # transit relaxation (in) |5><1|\r\n",
+    "γ₅₂=transition(myJ1system,5,2)   # transit relaxation (in) |5><2|\r\n",
+    "γ₅₃=transition(myJ1system,5,3)   # transit relaxation (in) |5><3|\r\n",
+    "proj1=transition(myJ1system,1,1) # |1><1|\r\n",
+    "proj2=transition(myJ1system,2,2) # |2><2|\r\n",
+    "proj3=transition(myJ1system,3,3) # |3><4|\r\n",
+    "proj4=transition(myJ1system,4,4) # |4><4|\r\n",
+    "#id=identityoperator(proj1)\r\n",
+    "J=[sqrt(γ)*γ₄₅,\r\n",
+    "   sqrt(γ)*γ₃₅,\r\n",
+    "   sqrt(γ)*γ₂₅,\r\n",
+    "   sqrt(γ)*γ₁₅,\r\n",
+    "   sqrt(br*Γ/3)*Γ₄₁,\r\n",
+    "   sqrt(br*Γ/3)*Γ₄₂,\r\n",
+    "   sqrt(br*Γ/3)*Γ₄₃,\r\n",
+    "   sqrt(γ/3)*γ₅₁,\r\n",
+    "   sqrt(γ/3)*γ₅₂,\r\n",
+    "   sqrt(γ/3)*γ₅₃\r\n",
+    "  ]\r\n",
+    "\r\n",
+    "Bvalues=[]\r\n",
+    "obs1=[]\r\n",
+    "obs2=[]\r\n",
+    "obs3=[]\r\n",
+    "obs4=[]\r\n",
+    "for B=Bmin:Bstep:Bmax\r\n",
+    "    H=(ΩR)*(σ₁₄+dagger(σ₁₄)) + (ΩR)*(σ₃₄+dagger(σ₃₄)) + ΩL*B*proj1 - ΩL*B*proj3 - Δ*proj4\r\n",
+    "    ϕ₀=(\r\n",
+    "        dm(nlevelstate(myJ1system,1))\r\n",
+    "            +dm(nlevelstate(myJ1system,2))\r\n",
+    "            +dm(nlevelstate(myJ1system,3))\r\n",
+    "            +3*dm(nlevelstate(myJ1system,5))\r\n",
+    "       )/6\r\n",
+    "    t_out, ρ_master = steady.master(H,J;rho0=ϕ₀)\r\n",
+    "    abs=3*(Γ/ΩR)*imag(expect(σ₃₄,ρ_master[2])-expect(σ₁₄,ρ_master[2]))\r\n",
+    "    Δϕ=3*(Γ/ΩR)*real(expect(σ₃₄,ρ_master[2])-expect(σ₁₄,ρ_master[2]))\r\n",
+    "    rot=3*(Γ/ΩR)*real(expect(σ₁₄,ρ_master[2])+expect(σ₃₄,ρ_master[2]))\r\n",
+    "    ell=3*(Γ/ΩR)*imag(expect(σ₁₄,ρ_master[2])+expect(σ₃₄,ρ_master[2]))\r\n",
+    "#    ell=3*(Γ/ΩR)*imag(expect(σ₁₄-σ₃₄,ρ_master[2]))\r\n",
+    "#    rot=3*(Γ/ΩR)*real(expect(σ₁₄-σ₃₄,ρ_master[2]))\r\n",
+    "#    abs=3*(Γ/ΩR)*real(expect(σ₁₄+σ₃₄,ρ_master[2]))\r\n",
+    "#    Δϕ=3*(Γ/ΩR)*imag(expect(σ₁₄+σ₃₄,ρ_master[2]))\r\n",
+    "    push!(Bvalues,B)\r\n",
+    "    push!(obs1,abs)\r\n",
+    "    push!(obs2,Δϕ)\r\n",
+    "    push!(obs3,rot)\r\n",
+    "    push!(obs4,ell)\r\n",
     "end"
    ]
   },
@@ -1643,17 +1643,17 @@
           -0.00017232907573890704,
           -0.00011549912409845181,
           -0.00010073323850490201,
-          -8.494716201389377e-05,
-          -4.827772040951958e-05,
-          -3.6327506945921934e-05,
-          -2.4227219665971106e-05,
-          -1.2117969896894426e-05,
+          -0.00008494716201389377,
+          -0.00004827772040951958,
+          -0.000036327506945921934,
+          -0.000024227219665971106,
+          -0.000012117969896894426,
           4.163336342344337e-17,
-          1.2117969896915243e-05,
-          2.4227219666054373e-05,
-          3.632750694596357e-05,
-          4.8277720409498764e-05,
-          8.494716201395622e-05,
+          0.000012117969896915243,
+          0.000024227219666054373,
+          0.00003632750694596357,
+          0.000048277720409498764,
+          0.00008494716201395622,
           0.00010073323850498528,
           0.00011549912409834773,
           0.00017232907573888623,
@@ -19231,21 +19231,8 @@
   }
  ],
  "metadata": {
-  "@webio": {
-   "lastCommId": null,
-   "lastKernelId": null
-  },
-  "kernelspec": {
-   "display_name": "Julia 1.6.0",
-   "language": "julia",
-   "name": "julia-1.6"
-  },
-  "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.6.0"
-  }
+  "language_info": {},
+  "orig_nbformat": 3
  },
  "nbformat": 4,
  "nbformat_minor": 4
