Added loop over B

--- a/Rb87-attempt.ipynb
+++ b/Rb87-attempt.ipynb
@@ -58443,7 +58443,7 @@
     "grBasisLength=length(fmBasisGr)\r\n",
     "exBasisLength=length(fmBasisEx)\r\n",
     "\r\n",
-    "#myD1Manifold=NLevelBasis(16)\r\n",
+    "#myD1Manifold=NLevelBasis(16)   \r\n",
     "#for i=1:length(NLevelBasis)\r\n",
     "    \r\n",
     "\r\n",
@@ -58471,7 +58471,7 @@
     "\r\n",
     "grStates=Dict([((2,2),1),((2,1),2),((2,0),3),((2,-1),4),((2,-2),5),((1,1),6),((1,0),7),((1,-1),8)])\r\n",
     "exStates=Dict([((2,2),9),((2,1),10),((2,0),11),((2,-1),12),((2,-2),13),((1,1),14),((1,0),15),((1,-1),16)])\r\n",
-    "rbD1=NLevelBasis(16)\r\n",
+    "rbD1=NLevelBasis(17)  # One extra state for fly-through relaxation\r\n",
     "\r\n",
     "function sigma(theBasis,gr,ex,F1,F2,q,mF)\r\n",
     "    transition(theBasis,gr[(F2,mF),ex(F2,mF+q)]) \r\n",
@@ -58590,24 +58590,26 @@
     "Ω=1.0       # Rabi frequency\r\n",
     "Γ=1.0       # Natual linewidth\r\n",
     "γ=1.0       # Transit relaxation\r\n",
+    "flyThrough = 17 # Level for transit (fly-through) relaxation\r\n",
+    "nGround    = 8  # number of levels in the ground state \r\n",
     "\r\n",
-    "gamma=Dict((\"ground\",(1,1))=>γ,\r\n",
-    "            (\"ground\",(1,0))=>γ, \r\n",
-    "            (\"ground\",(1,-1))=>γ,\r\n",
-    "            (\"ground\",(2,2))=>γ, \r\n",
-    "            (\"ground\",(2,1))=>γ,\r\n",
-    "            (\"ground\",(2,0))=>γ,\r\n",
-    "            (\"ground\",(2,-1))=>γ,\r\n",
-    "            (\"ground\",(2,-2))=>γ,\r\n",
-    "            (\"excited\",(1,1))=>γ+Γ,\r\n",
-    "            (\"excited\",(1,0))=>γ+Γ, \r\n",
-    "            (\"excited\",(1,-1))=>γ+Γ,\r\n",
-    "            (\"excited\",(2,2))=>γ+Γ, \r\n",
-    "            (\"excited\",(2,1))=>γ+Γ,\r\n",
-    "            (\"excited\",(2,0))=>γ+Γ,\r\n",
-    "            (\"excited\",(2,-1))=>γ+Γ,\r\n",
-    "            (\"excited\",(2,-2))=>γ+Γ,\r\n",
-    "            )\r\n",
+    "#gamma=Dict((\"ground\",(1,1))=>γ,\r\n",
+    "#           (\"ground\",(1,0))=>γ, \r\n",
+    " #           (\"ground\",(1,-1))=>γ,\r\n",
+    " #           (\"ground\",(2,2))=>γ, \r\n",
+    " #           (\"ground\",(2,1))=>γ,\r\n",
+    " #           (\"ground\",(2,0))=>γ,\r\n",
+    " #           (\"ground\",(2,-1))=>γ,\r\n",
+    " #           (\"ground\",(2,-2))=>γ,\r\n",
+    " #           (\"excited\",(1,1))=>γ+Γ,\r\n",
+    " #           (\"excited\",(1,0))=>γ+Γ, \r\n",
+    " #           (\"excited\",(1,-1))=>γ+Γ,\r\n",
+    " #           (\"excited\",(2,2))=>γ+Γ, \r\n",
+    " #           (\"excited\",(2,1))=>γ+Γ,\r\n",
+    " #           (\"excited\",(2,0))=>γ+Γ,\r\n",
+    " #           (\"excited\",(2,-1))=>γ+Γ,\r\n",
+    " #           (\"excited\",(2,-2))=>γ+Γ,\r\n",
+    " #           )\r\n",
     "\r\n",
     "Δ=100       # Detuning from D1 transition at 794.978851156 nm (377.107464380 THz)\r\n",
     "\r\n",
@@ -58622,11 +58624,23 @@
     "    push!(ωL,larmor[n2Fm[i]])\r\n",
     "    push!(detune,hfsE[n2Fm[i]]-Δ)\r\n",
     "    H += ( detune[i] + ωL[i]*0.001 )*proj[i] + Ω*dip[i]*(σ[i]*dagger(σ[i]))   # Hamiltonian\r\n",
-    "    push!(J,sqrt(gamma[n2Fm[i]])*proj[i])                                   # Jump operator\r\n",
+    "    push!(J,sqrt(γ)*transition(rbD1,i,flyThrough))                            # Jump for fly-through relaxation out\r\n",
+    "    push!(J,sqrt(γ/nGround)*transition(rbD1,flyThrough,i))                    # Jump for fly-through relaxation in \r\n",
+    "    for j=1:length(n2Fm)\r\n",
+    "        if n2Fm[i][1]==\"excited\" && n2Fm[j][1]==\"ground\"\r\n",
+    "             push!(J,sqrt(Γ/nGround)*transition(rbD1,i,j))\r\n",
+    "        end\r\n",
+    "    end\r\n",
     "end\r\n",
     "\r\n",
     "# Initial state\r\n",
-    "ϕ₀ = nlevelstate(rbD1,4)⊗dagger(nlevelstate(rbD1,4))\r\n",
+    "ρ₀ = (dm(nlevelstate(rbD1,4))\r\n",
+    "      +dm(nlevelstate(rbD1,5))\r\n",
+    "      +dm(nlevelstate(rbD1,6))\r\n",
+    "      +dm(nlevelstate(rbD1,7))\r\n",
+    "      +dm(nlevelstate(rbD1,8))\r\n",
+    "      +5*dm(nlevelstate(rbD1,flyThrough))\r\n",
+    "      )/10\r\n",
     "\r\n",
     "\r\n"
    ]
@@ -58638,7 +58652,7 @@
    "outputs": [],
    "source": [
     "import QuantumOptics.steadystate as steady \r\n",
-    "t_out, ρ_master = steady.master(H,J)"
+    "t_out, ρ_master = steady.master(H,J;rho0=ρ₀)"
    ]
   },
   {
@@ -58960,10 +58974,8 @@
    "name": "julia-1.6"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": ""
   }
  },
  "nbformat": 4,
