--- a/Rb87-attempt.ipynb
+++ b/Rb87-attempt.ipynb
@@ -51,6 +51,7 @@
    "source": [
     "using LinearAlgebra\r\n",
     "using QuantumOptics\r\n",
+    "import QuantumOptics.steadystate as steady\r\n",
     "using WignerSymbols\r\n",
     "using Plots\r\n",
     "plotly()\r\n",
@@ -58549,22 +58550,23 @@
     "grF2=0.375*hfsGr\r\n",
     "exF1=-0.625*hfsEx\r\n",
     "exF2=0.375*hfsEx\r\n",
-    "hfsE=Dict(  (\"ground\",(1,1))=>grF1,\r\n",
-    "            (\"ground\",(1,0))=>grF1, \r\n",
-    "            (\"ground\",(1,-1))=>grF1,\r\n",
-    "            (\"ground\",(2,2))=>grF2, \r\n",
-    "            (\"ground\",(2,1))=>grF2,\r\n",
-    "            (\"ground\",(2,0))=>grF2,\r\n",
-    "            (\"ground\",(2,-1))=>grF2,\r\n",
-    "            (\"ground\",(2,-2))=>grF2,\r\n",
-    "            (\"excited\",(1,1))=>exF1,\r\n",
-    "            (\"excited\",(1,0))=>exF1, \r\n",
-    "            (\"excited\",(1,-1))=>exF1,\r\n",
-    "            (\"excited\",(2,2))=>exF2, \r\n",
-    "            (\"excited\",(2,1))=>exF2,\r\n",
-    "            (\"excited\",(2,0))=>exF2,\r\n",
-    "            (\"excited\",(2,-1))=>exF2,\r\n",
-    "            (\"excited\",(2,-2))=>exF2,\r\n",
+    "Δ=1.0\r\n",
+    "hfsE=Dict(  (\"ground\",(1,1))=>-(grF1+grF2),\r\n",
+    "            (\"ground\",(1,0))=>-(grF1+grF2), \r\n",
+    "            (\"ground\",(1,-1))=>-(grF1+grF2),\r\n",
+    "            (\"ground\",(2,2))=>0, \r\n",
+    "            (\"ground\",(2,1))=>0,\r\n",
+    "            (\"ground\",(2,0))=>0,\r\n",
+    "            (\"ground\",(2,-1))=>0,\r\n",
+    "            (\"ground\",(2,-2))=>0,\r\n",
+    "            (\"excited\",(1,1))=>-(exF1+exF2),\r\n",
+    "            (\"excited\",(1,0))=>-(exF1+exF2), \r\n",
+    "            (\"excited\",(1,-1))=>-(exF1+exF2),\r\n",
+    "            (\"excited\",(2,2))=>-Δ, \r\n",
+    "            (\"excited\",(2,1))=>-Δ,\r\n",
+    "            (\"excited\",(2,0))=>-Δ,\r\n",
+    "            (\"excited\",(2,-1))=>-Δ,\r\n",
+    "            (\"excited\",(2,-2))=>-Δ,\r\n",
     "            )\r\n",
     "ωLGr1=-7000  # GHz/Tesla   Larmor frequency\r\n",
     "ωLGr2=7000 \r\n",
@@ -58589,7 +58591,7 @@
     "            )\r\n",
     "Ω=1.0       # Rabi frequency\r\n",
     "Γ=1.0       # Natual linewidth\r\n",
-    "γ=1.0       # Transit relaxation\r\n",
+    "γ=0.05       # Transit relaxation\r\n",
     "flyThrough = 17 # Level for transit (fly-through) relaxation\r\n",
     "nGround    = 8  # number of levels in the ground state \r\n",
     "\r\n",
@@ -58611,7 +58613,7 @@
     " #           (\"excited\",(2,-2))=>γ+Γ,\r\n",
     " #           )\r\n",
     "\r\n",
-    "Δ=100       # Detuning from D1 transition at 794.978851156 nm (377.107464380 THz)\r\n",
+    "#Δ=100       # Detuning from D1 transition at 794.978851156 nm (377.107464380 THz)\r\n",
     "\r\n",
     "proj=[]\r\n",
     "detune=[]\r\n",
@@ -58622,7 +58624,7 @@
     "for i=1:length(n2Fm)\r\n",
     "    push!(proj,transition(rbD1,i,i))\r\n",
     "    push!(ωL,larmor[n2Fm[i]])\r\n",
-    "    push!(detune,hfsE[n2Fm[i]]-Δ)\r\n",
+    "    push!(detune,hfsE[n2Fm[i]])\r\n",
     "    H += ( detune[i] + ωL[i]*0.001 )*proj[i] + Ω*dip[i]*(σ[i]*dagger(σ[i]))   # Hamiltonian\r\n",
     "    push!(J,sqrt(γ)*transition(rbD1,i,flyThrough))                            # Jump for fly-through relaxation out\r\n",
     "    push!(J,sqrt(γ/nGround)*transition(rbD1,flyThrough,i))                    # Jump for fly-through relaxation in \r\n",
@@ -58651,8 +58653,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import QuantumOptics.steadystate as steady \r\n",
-    "t_out, ρ_master = steady.master(H,J;rho0=ρ₀)"
+    "Bmin=-1.0e-4\r\n",
+    "Bmax=1.0e-4\r\n",
+    "Bstep=1.0e-5\r\n",
+    "ΩR=1.0       # Rabi frequency\r\n",
+    "Γ=1.0       # Natual linewidth\r\n",
+    "γ=0.05       # Transit relaxation\r\n",
+    "Bvalues=[]\r\n",
+    "absorb=[]\r\n",
+    "popEx=[]\r\n",
+    "popGr=[]\r\n",
+    "for B=Bmin:Bstep:Bmax\r\n",
+    "    H=identityoperator(σ[1])*0\r\n",
+    "    for i=1:length(n2Fm)\r\n",
+    "#        push!(ωL,larmor[n2Fm[i]]*B)\r\n",
+    "#        push!(detune,hfsE[n2Fm[i]]-Δ)\r\n",
+    "        H += (  detune[i] + ωL[i]*B )*proj[i] \r\n",
+    "    end\r\n",
+    "    for i=1:length(σ)\r\n",
+    "        H+= ΩR*dip[i]*(σ[i]+dagger(σ[i]))   # Hamiltonian\r\n",
+    "    end\r\n",
+    "        # Initial state\r\n",
+    "    ρ₀ =(\r\n",
+    "        dm(nlevelstate(rbD1,4))\r\n",
+    "        +dm(nlevelstate(rbD1,5))\r\n",
+    "        +dm(nlevelstate(rbD1,6))\r\n",
+    "        +dm(nlevelstate(rbD1,7))\r\n",
+    "        +dm(nlevelstate(rbD1,8))\r\n",
+    "        +5*dm(nlevelstate(rbD1,flyThrough))\r\n",
+    "        )/10\r\n",
+    "    t_out, ρ_master = steady.master(H,J;rho0=ρ₀)\r\n",
+    "    obs1=3*(Γ/ΩR)*imag(expect(σ[1],ρ_master[2])\r\n",
+    "                        +expect(σ[2],ρ_master[2])\r\n",
+    "                        +expect(σ[3],ρ_master[2])\r\n",
+    "                        +expect(σ[4],ρ_master[2])\r\n",
+    "                        +expect(σ[5],ρ_master[2])\r\n",
+    "                        +expect(σ[6],ρ_master[2])\r\n",
+    "                        +expect(σ[7],ρ_master[2])\r\n",
+    "                        +expect(σ[8],ρ_master[2])\r\n",
+    "                        +expect(σ[9],ρ_master[2])\r\n",
+    "                        +expect(σ[10],ρ_master[2])\r\n",
+    "                        +expect(σ[11],ρ_master[2])\r\n",
+    "                        +expect(σ[12],ρ_master[2])\r\n",
+    "                        -expect(σ[13],ρ_master[2])\r\n",
+    "                        -expect(σ[14],ρ_master[2])\r\n",
+    "                        -expect(σ[15],ρ_master[2])\r\n",
+    "                        -expect(σ[16],ρ_master[2])\r\n",
+    "                        -expect(σ[17],ρ_master[2])\r\n",
+    "                        -expect(σ[18],ρ_master[2])\r\n",
+    "                        -expect(σ[19],ρ_master[2])\r\n",
+    "                        -expect(σ[20],ρ_master[2])\r\n",
+    "                        -expect(σ[21],ρ_master[2])\r\n",
+    "                        -expect(σ[22],ρ_master[2])\r\n",
+    "                        -expect(σ[23],ρ_master[2])\r\n",
+    "                        -expect(σ[24],ρ_master[2])\r\n",
+    "                        )\r\n",
+    "    obs2=real(\r\n",
+    "        expect(proj[9],ρ_master[2])\r\n",
+    "        +expect(proj[10],ρ_master[2])\r\n",
+    "        +expect(proj[11],ρ_master[2])\r\n",
+    "        +expect(proj[12],ρ_master[2])\r\n",
+    "        +expect(proj[13],ρ_master[2])\r\n",
+    "        +expect(proj[14],ρ_master[2])\r\n",
+    "        +expect(proj[15],ρ_master[2])\r\n",
+    "        +expect(proj[16],ρ_master[2])\r\n",
+    "        )\r\n",
+    "        obs3=real(\r\n",
+    "            expect(proj[1],ρ_master[2])\r\n",
+    "            +expect(proj[2],ρ_master[2])\r\n",
+    "            +expect(proj[3],ρ_master[2])\r\n",
+    "            +expect(proj[4],ρ_master[2])\r\n",
+    "            +expect(proj[5],ρ_master[2])\r\n",
+    "            +expect(proj[6],ρ_master[2])\r\n",
+    "            +expect(proj[7],ρ_master[2])\r\n",
+    "            +expect(proj[8],ρ_master[2])\r\n",
+    "            )\r\n",
+    "    push!(Bvalues,B)\r\n",
+    "    push!(absorb,obs1)\r\n",
+    "    push!(popEx,obs2)\r\n",
+    "    push!(popGr,obs3)\r\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Plots.plot(Bvalues,popGr)"
    ]
   },
   {
