Removed detuning from Hamiltonian, Converges oddly

--- a/Rb87-attempt.ipynb
+++ b/Rb87-attempt.ipynb
@@ -58625,7 +58625,7 @@
     "    push!(proj,transition(rbD1,i,i))\r\n",
     "    push!(ωL,larmor[n2Fm[i]])\r\n",
     "    push!(detune,hfsE[n2Fm[i]])\r\n",
-    "    H += ( detune[i] + ωL[i]*0.001 )*proj[i] + Ω*dip[i]*(σ[i]*dagger(σ[i]))   # Hamiltonian\r\n",
+    "    H += ( detune[i] + ωL[i]*0.001 )*proj[i] # diagonal part of Hamiltonian\r\n",
     "    push!(J,sqrt(γ)*transition(rbD1,i,flyThrough))                            # Jump for fly-through relaxation out\r\n",
     "    push!(J,sqrt(γ/nGround)*transition(rbD1,flyThrough,i))                    # Jump for fly-through relaxation in \r\n",
     "    for j=1:length(n2Fm)\r\n",
@@ -58633,6 +58633,10 @@
     "             push!(J,sqrt(Γ/nGround)*transition(rbD1,i,j))\r\n",
     "        end\r\n",
     "    end\r\n",
+    "end\r\n",
+    "\r\n",
+    "for i=1:length(σ)\r\n",
+    "    H+= Ω*dip[i]*(σ[i]+dagger(σ[i])) # off-diagonal part of Hamiltonian\r\n",
     "end\r\n",
     "\r\n",
     "# Initial state\r\n",
@@ -58653,8 +58657,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Bmin=-1.0e-4\r\n",
-    "Bmax=1.0e-4\r\n",
+    "Bmin=-1.0e-3\r\n",
+    "Bmax=1.0e-3\r\n",
     "Bstep=1.0e-5\r\n",
     "ΩR=1.0       # Rabi frequency\r\n",
     "Γ=1.0       # Natual linewidth\r\n",
@@ -58668,7 +58672,8 @@
     "    for i=1:length(n2Fm)\r\n",
     "#        push!(ωL,larmor[n2Fm[i]]*B)\r\n",
     "#        push!(detune,hfsE[n2Fm[i]]-Δ)\r\n",
-    "        H += (  detune[i] + ωL[i]*B )*proj[i] \r\n",
+    "#        H += (  detune[i] + ωL[i]*B )*proj[i]\r\n",
+    "        H += (  ωL[i]*B )*proj[i]\r\n",
     "    end\r\n",
     "    for i=1:length(σ)\r\n",
     "        H+= ΩR*dip[i]*(σ[i]+dagger(σ[i]))   # Hamiltonian\r\n",
@@ -58741,7 +58746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Plots.plot(Bvalues,popGr)"
+    "Plots.plot(Bvalues,popEx)"
    ]
   },
   {
