--- a/Rb87-attempt.ipynb
+++ b/Rb87-attempt.ipynb
@@ -58750,6 +58750,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Plots.plot(Bvalues,absorb)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -59022,12 +59031,13 @@
     }
    ],
    "source": [
-    "# This command just gives us information about the packages used in our environment.\n",
-    "# The information is stored in a Manifest.toml file.  \n",
-    "# It is useful for reproducing the environment on another machine, for example, \n",
-    "# using mybinder.org.\n",
-    "using Pkg\n",
-    "Pkg.status(mode=PKGMODE_MANIFEST)"
+    "# This command just gives us information about the packages used in our environment.\r\n",
+    "# The information is stored in a Manifest.toml file.  \r\n",
+    "# It is useful for reproducing the environment on another machine, for example, \r\n",
+    "# using mybinder.org.\r\n",
+    "\r\n",
+    "#using Pkg\r\n",
+    "#Pkg.status(mode=PKGMODE_MANIFEST)"
    ]
   },
   {
@@ -59049,8 +59059,9 @@
     }
    ],
    "source": [
-    "# This command write a Project.toml file, which is useful if we want to recreate the environment on another machine.\n",
-    "pkg\"status\""
+    "# This command write a Project.toml file, which is useful if we want to recreate the environment on another machine.\r\n",
+    "\r\n",
+    "#pkg\"status\""
    ]
   },
   {
