--- a/Rb87D1transition.ipynb
+++ b/Rb87D1transition.ipynb
@@ -303,15 +303,15 @@
          "type": "scatter",
          "x": [
           0,
-          1e-05,
-          2e-05,
-          3e-05,
-          4e-05,
-          5e-05,
-          6e-05,
-          7e-05,
-          8e-05,
-          9e-05,
+          0.00001,
+          0.00002,
+          0.00003,
+          0.00004,
+          0.00005,
+          0.00006,
+          0.00007,
+          0.00008,
+          0.00009,
           0.0001,
           0.00011,
           0.00012,
@@ -561,7 +561,7 @@
          "linecolor": "rgba(0, 0, 0, 1.000)",
          "mirror": false,
          "range": [
-          -3e-05,
+          -0.00003,
           0.00103
          ],
          "showgrid": true,
@@ -1291,10 +1291,8 @@
    "name": "julia-1.6"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.0"
+   "version": ""
   }
  },
  "nbformat": 4,
